--- a/todo/package.json
+++ b/todo/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "immer": "^8.0.1",
     "ini": "^2.0.0",
+    "node-notifier": "^9.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
